src/pages/Index.css
main.index {
  background: var(--secondary) url("/spacejoy-808a4AWu8jE-unsplash.jpg")
    no-repeat center;
  background-size: cover;
  width: 100%;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  line-height: 1.2;
  font-size: 1.75rem;
}

main.index .center-container {
  width: 100%;
}

p.index-message {
  width: 100%;
  color: hsl(39, 77%, 100%);
  padding: 18px 0;
  margin: 0;
  font-family: "Pacifico", cursive, Impact, Haettenschweiler, sans-serif;
  display: block;
  user-select: none;

  background: var(--primary-opaque);
}

.index-text-special {
  font-family: "Dancing Script", cursive, Arial, Helvetica, sans-serif;
  font-weight: 600;
  font-size: 1.125em;
}

.index-sample {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.index-sample a {
  font-size: 1.75rem;
  font-weight: bold;
  color: white;
  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
  text-decoration: none;
  background-color: var(--accent);
  padding: 8px 16px 12px;
  border-top: 2px solid white;
  border-radius: 24px;
  margin: 48px 0 0;
  transition: transform 170ms ease-out;
}

.index-sample a:visited {
  color: initial;
}

.index-sample a:hover {
  transform: scale(1.1);
}

a.index-credits {
  position: absolute;
  bottom: 4px;
  left: 8px;
  font-size: 1rem;
  text-decoration: none;

  color: white;
  --stoke-color: hsla(0, 0%, 24%, 0.8);
  text-shadow:
    -1px -1px 0 var(--stoke-color),
    1px -1px 0 var(--stoke-color),
    -1px 1px 0 var(--stoke-color),
    1px 1px 0 var(--stoke-color);
  background-color: rgba(0, 0, 0, 0.1);
}

